// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonV2 render large 1`] = `
<DocumentFragment>
  .cache-myi3of-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-myi3of-StyledButton-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-myi3of-StyledButton-StyledFilledButton:hover,
.cache-myi3of-StyledButton-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-myi3of-StyledButton-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render medium 1`] = `
<DocumentFragment>
  .cache-260sr0-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 14px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-260sr0-StyledButton-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-260sr0-StyledButton-StyledFilledButton:hover,
.cache-260sr0-StyledButton-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-260sr0-StyledButton-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render small 1`] = `
<DocumentFragment>
  .cache-1pir1ef-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 14px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-1pir1ef-StyledButton-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-1pir1ef-StyledButton-StyledFilledButton:hover,
.cache-1pir1ef-StyledButton-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-1pir1ef-StyledButton-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with fullWidth 1`] = `
<DocumentFragment>
  .cache-18l9cyw-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
}

.cache-18l9cyw-StyledButton-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-18l9cyw-StyledButton-StyledFilledButton:hover,
.cache-18l9cyw-StyledButton-StyledFilledButton:active {
  background: #390171;
  color: #ffffff;
}

<button
    class="cache-18l9cyw-StyledButton-StyledFilledButton e1su13oj2"
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with icon 1`] = `
<DocumentFragment>
  .cache-cqsvoi-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-cqsvoi-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with icon on the right 1`] = `
<DocumentFragment>
  .cache-1c79nq5-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-1c79nq5-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with icon only 1`] = `
<DocumentFragment>
  .cache-1c79nq5-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<button
    class="cache-1c79nq5-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with isLoading with icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-cqsvoi-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-cqsvoi-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 render with isLoading without icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-cqsvoi-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<button
    class="cache-cqsvoi-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="cache-gqzzce-Loader"
      role="progressbar"
      style="height: 1em; width: 1em;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="transparent"
        stroke-width="16"
      />
      <circle
        class="cache-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="currentColor"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&danger 1`] = `
<DocumentFragment>
  .cache-1t86p37-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #dd3252;
  border: none;
  color: #ffffff;
  background: #fbbac6;
  color: #fff5f7;
}

<button
    class="cache-1t86p37-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&danger disabled 1`] = `
<DocumentFragment>
  .cache-1t86p37-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #dd3252;
  border: none;
  color: #ffffff;
  background: #fbbac6;
  color: #fff5f7;
}

<button
    class="cache-1t86p37-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&info 1`] = `
<DocumentFragment>
  .cache-1db60yp-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #3f6ed8;
  border: none;
  color: #ffffff;
  background: #a8bff1;
  color: #f4f7ff;
}

<button
    class="cache-1db60yp-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&info disabled 1`] = `
<DocumentFragment>
  .cache-1db60yp-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #3f6ed8;
  border: none;
  color: #ffffff;
  background: #a8bff1;
  color: #f4f7ff;
}

<button
    class="cache-1db60yp-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&neutral 1`] = `
<DocumentFragment>
  .cache-ai44sa-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #f6f6f8;
  border: none;
  color: #4a4f62;
  background: #f6f6f8;
  color: #c4c9d6;
}

<button
    class="cache-ai44sa-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&neutral disabled 1`] = `
<DocumentFragment>
  .cache-ai44sa-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #f6f6f8;
  border: none;
  color: #4a4f62;
  background: #f6f6f8;
  color: #c4c9d6;
}

<button
    class="cache-ai44sa-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&primary 1`] = `
<DocumentFragment>
  .cache-cqsvoi-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

<button
    class="cache-cqsvoi-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&primary disabled 1`] = `
<DocumentFragment>
  .cache-cqsvoi-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #4f0599;
  border: none;
  color: #ffffff;
  background: #bda5df;
  color: #f9f9ff;
}

<button
    class="cache-cqsvoi-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&success 1`] = `
<DocumentFragment>
  .cache-1dpi5yd-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #22c8a2;
  border: none;
  color: #ffffff;
  background: #9fefdd;
  color: #f5fff6;
}

<button
    class="cache-1dpi5yd-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&success disabled 1`] = `
<DocumentFragment>
  .cache-1dpi5yd-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #22c8a2;
  border: none;
  color: #ffffff;
  background: #9fefdd;
  color: #f5fff6;
}

<button
    class="cache-1dpi5yd-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&warning 1`] = `
<DocumentFragment>
  .cache-sczhe3-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #ff8c69;
  border: none;
  color: #ffffff;
  background: #ffd7c1;
  color: #fffcfa;
}

<button
    class="cache-sczhe3-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render filled&warning disabled 1`] = `
<DocumentFragment>
  .cache-sczhe3-StyledButton-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #ff8c69;
  border: none;
  color: #ffffff;
  background: #ffd7c1;
  color: #fffcfa;
}

<button
    class="cache-sczhe3-StyledButton-StyledFilledButton e1su13oj2"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&danger 1`] = `
<DocumentFragment>
  .cache-nlx975-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #dd3252;
  color: #fbbac6;
}

<button
    class="cache-nlx975-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&danger disabled 1`] = `
<DocumentFragment>
  .cache-nlx975-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #dd3252;
  color: #fbbac6;
}

<button
    class="cache-nlx975-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&info 1`] = `
<DocumentFragment>
  .cache-tok9j3-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #3f6ed8;
  color: #a8bff1;
}

<button
    class="cache-tok9j3-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&info disabled 1`] = `
<DocumentFragment>
  .cache-tok9j3-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #3f6ed8;
  color: #a8bff1;
}

<button
    class="cache-tok9j3-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&neutral 1`] = `
<DocumentFragment>
  .cache-1j6glqz-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
  color: #c4c9d6;
}

<button
    class="cache-1j6glqz-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&neutral disabled 1`] = `
<DocumentFragment>
  .cache-1j6glqz-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4a4f62;
  color: #c4c9d6;
}

<button
    class="cache-1j6glqz-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&primary 1`] = `
<DocumentFragment>
  .cache-1gwi2mv-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
}

<button
    class="cache-1gwi2mv-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&primary disabled 1`] = `
<DocumentFragment>
  .cache-1gwi2mv-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #4f0599;
  color: #bda5df;
}

<button
    class="cache-1gwi2mv-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&success 1`] = `
<DocumentFragment>
  .cache-1cdbuye-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #22c8a2;
  color: #9fefdd;
}

<button
    class="cache-1cdbuye-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&success disabled 1`] = `
<DocumentFragment>
  .cache-1cdbuye-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #22c8a2;
  color: #9fefdd;
}

<button
    class="cache-1cdbuye-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&warning 1`] = `
<DocumentFragment>
  .cache-1jkxz6c-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #ff8c69;
  color: #ffc8a9;
}

<button
    class="cache-1jkxz6c-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render ghost&warning disabled 1`] = `
<DocumentFragment>
  .cache-1jkxz6c-StyledButton-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: none;
  color: #ff8c69;
  color: #ffc8a9;
}

<button
    class="cache-1jkxz6c-StyledButton-StyledGhostButton e1su13oj0"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&danger 1`] = `
<DocumentFragment>
  .cache-14e9tmu-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #dd3252;
  color: #dd3252;
  color: #fbbac6;
  border: 1px solid #fbbac6;
}

<button
    class="cache-14e9tmu-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&danger disabled 1`] = `
<DocumentFragment>
  .cache-14e9tmu-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #dd3252;
  color: #dd3252;
  color: #fbbac6;
  border: 1px solid #fbbac6;
}

<button
    class="cache-14e9tmu-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&info 1`] = `
<DocumentFragment>
  .cache-4iv0ck-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #3f6ed8;
  color: #3f6ed8;
  color: #a8bff1;
  border: 1px solid #a8bff1;
}

<button
    class="cache-4iv0ck-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&info disabled 1`] = `
<DocumentFragment>
  .cache-4iv0ck-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #3f6ed8;
  color: #3f6ed8;
  color: #a8bff1;
  border: 1px solid #a8bff1;
}

<button
    class="cache-4iv0ck-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&neutral 1`] = `
<DocumentFragment>
  .cache-anhzt-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

<button
    class="cache-anhzt-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&neutral disabled 1`] = `
<DocumentFragment>
  .cache-anhzt-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #d4dae7;
  color: #4a4f62;
  color: #c4c9d6;
  border: 1px solid #d4dae7;
}

<button
    class="cache-anhzt-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&primary 1`] = `
<DocumentFragment>
  .cache-1edbo5l-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #4f0599;
  color: #4f0599;
  color: #bda5df;
  border: 1px solid #bda5df;
}

<button
    class="cache-1edbo5l-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&primary disabled 1`] = `
<DocumentFragment>
  .cache-1edbo5l-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #4f0599;
  color: #4f0599;
  color: #bda5df;
  border: 1px solid #bda5df;
}

<button
    class="cache-1edbo5l-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&success 1`] = `
<DocumentFragment>
  .cache-h0pu6d-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #22c8a2;
  color: #22c8a2;
  color: #9fefdd;
  border: 1px solid #9fefdd;
}

<button
    class="cache-h0pu6d-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&success disabled 1`] = `
<DocumentFragment>
  .cache-h0pu6d-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #22c8a2;
  color: #22c8a2;
  color: #9fefdd;
  border: 1px solid #9fefdd;
}

<button
    class="cache-h0pu6d-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&warning 1`] = `
<DocumentFragment>
  .cache-fmlo7t-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #ff8c69;
  color: #ff8c69;
  color: #ffc8a9;
  border: 1px solid #ffc8a9;
}

<button
    class="cache-fmlo7t-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;

exports[`ButtonV2 variant-sentiment-disabled combination render outlined&warning disabled 1`] = `
<DocumentFragment>
  .cache-fmlo7t-StyledButton-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  width: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  font-size: 16px;
  font-family: Asap;
  font-weight: Medium;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: none;
  border: 1px solid #ff8c69;
  color: #ff8c69;
  color: #ffc8a9;
  border: 1px solid #ffc8a9;
}

<button
    class="cache-fmlo7t-StyledButton-StyledOutlinedButton e1su13oj1"
    disabled=""
    type="button"
  >
    Hello
  </button>
</DocumentFragment>
`;
